# capacitacao

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
aeroespacial/: README.md  pyproject.toml
aeroespacial/conf/: logging.yml
aeroespacial/docs/source/: conf.py  index.rst
aeroespacial/notebooks/: 0_agrega_dados.ipynb  1_explora_dados.ipynb  2.1_modelagem l<100.ipynb  2_modelagem.ipynb  3_engenharia_de_features.ipynb  4_selecao_features_com_modelo_linear.ipynb  5_explicabilidade.ipynb  5_teste_dos_modelos.ipynb  6_explicabilidade.ipynb  basic_processing.ipynb  data.ipynb  explainer_expected_value.pkl  using_all_data.ipynb  utils.py
aeroespacial/src/aeroespacial/: __init__.py  __main__.py  settings.py
aeroespacial/src/aeroespacial/pipelines/data_processing/: nodes.py  pipeline.py
aeroespacial/src/aeroespacial/pipelines/reporting/: nodes.py
aeroespacial/tests/pipelines/data_science/: test_pipeline.py
